<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".views.ui.register.RegisterActivity">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="80dp"
                            android:gravity="clip_vertical"
                            android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/imageView"
                                    android:layout_width="match_parent"
                                    android:layout_height="45dp"
                                    android:layout_marginTop="16dp"
                                    android:contentDescription="@string/logo_app"
                                    app:srcCompat="@drawable/logo_workflix_1" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="353dp"
                            android:layout_height="406dp"
                            android:layout_gravity="center|clip_vertical"
                            android:orientation="vertical">

                                <EditText
                                    android:id="@+id/editTextText"
                                    android:layout_width="323dp"
                                    android:layout_height="48dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginStart="32dp"
                                    android:layout_marginTop="6dp"
                                    android:layout_marginEnd="32dp"
                                    android:layout_marginBottom="15dp"
                                    android:ems="10"
                                    android:hint="@string/nombreRegistro"
                                    android:inputType="text"
                                    android:background="@drawable/borde_edit_text"
                                    android:textColor="@color/grey"
                                    android:textColorHint="@color/grey3" />

                                <EditText
                                    android:id="@+id/editTextText2"
                                    android:layout_width="323dp"
                                    android:layout_height="48dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginStart="32dp"
                                    android:layout_marginEnd="32dp"
                                    android:layout_marginBottom="15dp"
                                    android:ems="10"
                                    android:hint="@string/apellidoRegistro"
                                    android:inputType="text"
                                    android:background="@drawable/borde_edit_text"
                                    android:textColor="@color/grey"
                                    android:textColorHint="@color/grey3" />

                                <EditText
                                    android:id="@+id/editTextTextEmailAddress"
                                    android:layout_width="323dp"
                                    android:layout_height="48dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginStart="32dp"
                                    android:layout_marginEnd="32dp"
                                    android:layout_marginBottom="15dp"
                                    android:ems="10"
                                    android:hint="@string/correoRegistro"
                                    android:inputType="textEmailAddress"
                                    android:background="@drawable/borde_edit_text"
                                    android:textColor="@color/grey"
                                    android:textColorHint="@color/grey3" />

                                <EditText
                                    android:id="@+id/editTextTextPassword"
                                    android:layout_width="323dp"
                                    android:layout_height="48dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginStart="32dp"
                                    android:layout_marginEnd="32dp"
                                    android:layout_marginBottom="15dp"
                                    android:ems="10"
                                    android:hint="@string/prompt_password"
                                    android:inputType="textPassword"
                                    android:selectAllOnFocus="true"
                                    android:background="@drawable/borde_edit_text"
                                    android:textColor="@color/grey"
                                    android:textColorHint="@color/grey3" />

                                <EditText
                                    android:id="@+id/editTextTextPassword2"
                                    android:layout_width="323dp"
                                    android:layout_height="48dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginStart="32dp"
                                    android:layout_marginEnd="32dp"
                                    android:layout_marginBottom="15dp"
                                    android:ems="10"
                                    android:hint="@string/prompt_password2"
                                    android:inputType="textPassword"
                                    android:selectAllOnFocus="true"
                                    android:background="@drawable/borde_edit_text"
                                    android:textColor="@color/grey"
                                    android:textColorHint="@color/grey3" />

                                <EditText
                                    android:id="@+id/editTextPhone"
                                    android:layout_width="323dp"
                                    android:layout_height="48dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginStart="32dp"
                                    android:layout_marginEnd="32dp"
                                    android:layout_marginBottom="0dp"
                                    android:ems="10"
                                    android:hint="@string/celularRegistro"
                                    android:inputType="phone"
                                    android:background="@drawable/borde_edit_text"
                                    android:textColor="@color/grey"
                                    android:textColorHint="@color/grey3" />

                                <TextView
                                    android:id="@+id/aclaracionTel"
                                    android:layout_width="match_parent"
                                    android:layout_height="25dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginStart="20dp"
                                    android:layout_marginEnd="20dp"
                                    android:layout_marginBottom="5dp"
                                    android:contentDescription="@string/ingresarCelu"
                                    android:ems="10"
                                    android:text="@string/textoCel"
                                    android:textColor="@color/design_default_color_error"
                                    android:textStyle="bold|italic" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="336dp"
                            android:layout_height="193dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="15dp"
                            android:orientation="vertical">

                                <Button
                                    android:id="@+id/button"
                                    style="@style/Widget.MaterialComponents.Button"
                                    android:layout_width="match_parent"
                                    android:layout_height="48dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginStart="32dp"
                                    android:layout_marginTop="10dp"
                                    android:layout_marginEnd="32dp"
                                    android:backgroundTint="@color/verde1"
                                    android:text="Registrarse"
                                    android:textColor="@color/black" />

                                <TextView
                                    android:id="@+id/textView4"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginTop="50dp"
                                    android:layout_marginBottom="10dp"
                                    android:isScrollContainer="false"
                                    android:text="¿Ya tiene cuenta?"
                                    android:textAlignment="center"
                                    android:textColor="@color/grey" />

                                <Button
                                    android:id="@+id/button2"
                                    style="@style/Widget.MaterialComponents.Button"
                                    android:layout_width="match_parent"
                                    android:layout_height="48dp"
                                    android:layout_gravity="center_horizontal"
                                    android:layout_marginStart="55dp"
                                    android:layout_marginTop="1dp"
                                    android:layout_marginEnd="55dp"
                                    android:layout_marginBottom="55dp"
                                    android:backgroundTint="@color/azul"
                                    android:onClick="irLogin"
                                    android:text="Ingresar"
                                    android:textColor="@color/white" />
                        </LinearLayout>

                </LinearLayout>
        </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>